Fixed spacing at bottom of screen

--- a/mind-well/Mindwell/angular/app.less
+++ b/mind-well/Mindwell/angular/app.less
@@ -33,3 +33,7 @@
         opacity: 1;
     }
 }
+
+body {
+    margin-bottom: 20px;
+}
